# ConwayGOL

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  game.cc  game.h  main.cc  main.cxx
src/experiments/: .test_texture.cc.swp  test_texture.cc  test_texture.h
src/grid/: .cell.cc.swp  .cell.h.swp  cell.cc  cell.h  coordinates.h  grid.cc  grid.h
